# baton-studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRODUCT.md  PROMPT_FOR_CODEX.md  README.md  SECURITY.md  docker-compose.yml
.codex/: BURN_DOWN.md  PLANS.md  SCRATCHPAD.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/baton_substrate/: config.py
backend/baton_substrate/api/: agents.py  baton.py  causal.py  demo.py  dependencies.py  energy.py  events.py  export.py  main.py  metrics.py  missions.py  observability.py  patches.py  routes.py  security.py  world.py  ws.py
backend/baton_substrate/db/: __init__.py  engine.py  schema.py
backend/baton_substrate/demo/: agent_behaviors.py  schema_pack.py  simulator.py
backend/baton_substrate/invariants/: builtin.py  engine.py
backend/baton_substrate/models/: agent.py  baton.py  causal.py  common.py  energy.py  event.py  metrics.py  mission.py  patch.py  world.py
backend/baton_substrate/scripts/: run_demo.py
backend/baton_substrate/services/: agent_service.py  baton_service.py  causal_service.py  energy_service.py  event_service.py  export_service.py  metrics_service.py  mission_service.py  patch_service.py  world_service.py
backend/baton_substrate/ws/: broadcaster.py  manager.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py  test_api_flow.py  test_backend_hardening.py  test_baton_service.py  test_causal_service.py  test_demo_simulator.py  test_energy_service.py  test_invariant_engine.py  test_metrics_service.py  test_patch_service.py  test_run_demo_script.py
docs/: ACCEPTANCE_CHECKLIST.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  DATA_MODEL.md  DEMO_SCRIPT.md  MCP_SPEC.md  PRD.md  QUALITY_BURN_DOWN.md  TROUBLESHOOTING.md  UX_SPEC.md  WHITEPAPER.md
frontend/: .dockerignore  .pnpmfile.cjs  Dockerfile  next.config.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+2 more)
mcp_server/: README.md  main.py  pyproject.toml
mcp_server/tests/: test_smoke.py
(+75 files in other folders)
