[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baton-substrate"
version = "0.1.0"
description = "Baton Studio backend: shared world model + causal graph + energy pool + baton arbitration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "websockets>=12.0",
  "jsonschema>=4.21",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baton_substrate*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
