[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baton-mcp-server"
version = "0.1.0"
description = "MCP server exposing Baton Studio substrate operations as tools."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.27",
  "cryptography>=46.0.7",
  "pyjwt>=2.12.0",
]

[project.scripts]
baton-mcp-server = "main:cli"

[project.optional-dependencies]
dev = [
  "pygments>=2.20.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
]
